# gtkterm

./: Makefile.am  README.md  gtkterm.desktop
